rs-measures/tests/ui/measure028_convert.stderr
error[E0271]: type mismatch resolving `<KiloGram as rs_measures::traits::MeasurementUnit>::Property == Time`
  --> $DIR/measure028_convert.rs:28:15
   |
28 |     let _ = m.convert::<KiloGram>();
   |               ^^^^^^^ expected struct `Mass`, found struct `Time`
